--- a/Kconfig
+++ b/Kconfig
@@ -48,6 +48,7 @@ endmenu
 menu "Applications"
     source "apps/capdl-loader-experimental/Kconfig"
     source "apps/vm/Kconfig"
+    source "apps/vchan-test/Kconfig"
     source "apps/cxx/Kconfig"
 endmenu
 
