--- a/apps/vm/Kbuild
+++ b/apps/vm/Kbuild
@@ -10,8 +10,8 @@
 
 apps-$(CONFIG_APP_CAMKES_VM)    += vm
 
-vm-y     = common libsel4 libmuslc libsel4vka libsel4allocman libsel4muslcsys libboost \
+vm     = common libsel4 libmuslc libsel4vka libsel4allocman libsel4muslcsys libboost \
 libsel4vspace libsel4utils libpci libcpio libsel4vmm libelf libutils libsel4camkes libsel4sync libsel4debug libsel4muslccamkes libsel4simple libsel4simple-stable libsel4platsupport libethdrivers liblwip
 
 
-vm: $(vm-y)
+# vm: $(vm-y)
