--- a/apps/vchan-test-aadl/Kconfig
+++ b/apps/vchan-test-aadl/Kconfig
@@ -8,10 +8,10 @@
 # @TAG(NICTA_GPL)
 #
 
-menuconfig APP_CAMKES_VCHANTEST
-    bool "Simple Vchan test application"
+menuconfig APP_CAMKES_VCHANTEST_AADL
+    bool "Vchan and AADL test application"
     default n
     depends on LIB_SEL4 && (LIB_MUSL_C || LIB_SEL4_C) && LIB_SEL4_VKA &&\
                LIB_SEL4_VMM && LIB_SEL4_UTILS && LIB_UTILS && LIB_SEL4_PLAT_SUPPORT 
     help 
-        Simple VChan Client and Server Test application without VM.
+        VChan and AADL Test application.
